--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
   h2:
     console:
       enabled: true
+  application:
+    name: PAYMENT-SERVICE
 
   datasource:
     url: jdbc:h2:mem:testPaymentdb
@@ -16,3 +18,12 @@ spring:
       show-sql: true
 
 # http://localhost:9191/h2-console/
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
