--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -15,7 +15,7 @@
 	<description>Microservice API Order Servcie</description>
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+		<spring-cloud.version>2022.0.5</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
